Update name and links

--- a/content/config.json
+++ b/content/config.json
@@ -1,11 +1,11 @@
 {
-  "title": "Blog by John Doe",
-  "url": "https://lumen.alxshelepenok.com",
-  "subtitle": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
+  "title": "calvinqi.com",
+  "url": "https://calvinqi.com",
+  "subtitle": "Calvin Qi's personal website",
   "copyright": "© All rights reserved.",
-  "googleAnalyticsId": "UA-73379983-2",
+  "googleAnalyticsId": "UA-185064256-1",
   "disqusShortname": "",
-  "postsLimit": 4,
+  "postsLimit": 6,
   "pathPrefix": "/",
   "menu": [
     {
@@ -22,19 +22,19 @@
     }
   ],
   "author": {
-    "name": "John Doe",
+    "name": "Calvin Qi",
     "photo": "/photo.jpg",
     "bio": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
     "contacts": {
       "rss": "",
       "email": "",
-      "github": "#",
-      "facebook": "#",
-      "telegram": "#",
-      "twitter": "#",
-      "linkedin": "#",
-      "instagram": "#",
-      "mastodon": "#",
+      "github": "calvinqi",
+      "facebook": "",
+      "telegram": "",
+      "twitter": "",
+      "linkedin": "calvinqi",
+      "instagram": "",
+      "mastodon": "",
       "line": "",
       "weibo": "",
       "gitlab": "",
