--- a/content/config.json
+++ b/content/config.json
@@ -19,6 +19,10 @@
     {
       "label": "Contact me",
       "path": "/pages/contacts"
+    },
+    {
+      "label": "Tags",
+      "path": "/tags"
     }
   ],
   "author": {
