add email contact and image

--- a/content/config.json
+++ b/content/config.json
@@ -31,7 +31,7 @@
     "bio": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
     "contacts": {
       "rss": "",
-      "email": "",
+      "email": "calvincqi@gmail.com",
       "github": "calvinqi",
       "facebook": "",
       "telegram": "",
