update bio, allow links

--- a/content/config.json
+++ b/content/config.json
@@ -20,7 +20,7 @@
   "author": {
     "name": "Calvin Qi",
     "photo": "/photo.jpg",
-    "bio": "Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu.",
+    "bio": "",
     "contacts": {
       "rss": "",
       "email": "calvincqi@gmail.com",
