--- a/content/config.json
+++ b/content/config.json
@@ -2,7 +2,7 @@
   "title": "calvinqi.com",
   "url": "https://calvinqi.com",
   "subtitle": "Calvin Qi's personal website",
-  "copyright": "© All rights reserved.",
+  "copyright": "© Calvin Qi 2023",
   "googleAnalyticsId": "UA-185064256-1",
   "disqusShortname": "",
   "postsLimit": 6,
