--- a/content/config.json
+++ b/content/config.json
@@ -3,7 +3,7 @@
   "url": "https://calvinqi.com",
   "subtitle": "Calvin Qi's personal website",
   "copyright": "© Calvin Qi 2025",
-  "googleAnalyticsId": "UA-185064256-1",
+  "googleAnalyticsId": "G-41KS3YNVR0",
   "disqusShortname": "",
   "postsLimit": 8,
   "pathPrefix": "/",
